dxscale/core/serviceBase/objects/Service_Invocation__mdt/Service_Invocation__mdt.object-meta.xml
<CustomObject>
    <label>Service Invocation</label>
    <pluralLabel>Service Invocations</pluralLabel>
</CustomObject>