dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Async_Platform_Event__c.field-meta.xml
<CustomField>
    <fullName>Async_Platform_Event__c</fullName>
    <description>the API name of the Platform Event to publish to for an Async Invocation Type</description>
    <inlineHelpText>the API name of the Platform Event to publish to for an Async Invocation Type</inlineHelpText>
    <label>Async Platform Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>