dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/External_Invocation__c.field-meta.xml
<CustomField>
    <fullName>External_Invocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this invocation can be triggered by an External Call</description>
    <label>External Invocation</label>
    <type>Checkbox</type>
</CustomField>