dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Input_Creation_Class__c.field-meta.xml
<CustomField>
    <fullName>Input_Creation_Class__c</fullName>
    <description>Class name that implements the Input Interface Version that is used to create the input used in the service invocation. The Service and Service Version should not need to know this class name.</description>
    <inlineHelpText>Class name that implements the Input Interface Version that is used to create the input used in the service invocation. The Service and Service Version should not need to know this class name.</inlineHelpText>
    <label>Input Creation Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>