dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Input_Interface_Version__c.field-meta.xml
<CustomField>
    <fullName>Input_Interface_Version__c</fullName>
    <description>Input Interface that this invocation will provide to the Service</description>
    <inlineHelpText>Input Interface that this invocation will provide to the Service</inlineHelpText>
    <label>Input Interface Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>