dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Invocation_Permission__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Permission__c</fullName>
    <description>Custom Permission that must be assigned to a user to invoke this service</description>
    <inlineHelpText>Custom Permission that must be assigned to a user to invoke this service</inlineHelpText>
    <label>Invocation Permission</label>
    <length>80</length>
    <type>Text</type>
</CustomField>