dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Invocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Invocation_Type__c</fullName>
    <defaultValue>&quot;Sync&quot;</defaultValue>
    <label>Invocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
                <default>true</default>
                <label>Sync</label>
            </value>
            <value>
                <fullName>Async</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>