dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <description>a versioning iterated number for a Service. This is only required for a Services with Methods as implementation versioning is provided by Service Versions otherwise.</description>
    <inlineHelpText>a versioning iterated number for a Service. This is only required for a Services with Methods as implementation versioning is provided by Service Versions otherwise.</inlineHelpText>
    <label>Iteration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>