dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Log_Requests__c.field-meta.xml
<CustomField>
    <fullName>Log_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Requests</label>
    <type>Checkbox</type>
</CustomField>