dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>a business logical name for the method. Name for the method must match between &quot;Service Invocation&quot; and &quot;Service Method&quot;</description>
    <inlineHelpText>a business logical name for the method. Name for the method must match between &quot;Service Invocation&quot; and &quot;Service Method&quot;</inlineHelpText>
    <label>Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>