dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Output_Audit_Override_Option__c.field-meta.xml
<CustomField>
    <fullName>Output_Audit_Override_Option__c</fullName>
    <description>If the targetted Method Implementaton implements the IService_Implementation_Audit_Override interface then this chooses whether this invocation should respect this (Override, which is the Default) or not and return the Raw output of the service to audit</description>
    <inlineHelpText>If the targetted Method Implementaton implements the IService_Implementation_Audit_Override interface then this chooses whether this invocation should respect this (Override, which is the Default) or not and return the Raw output of the service to audit</inlineHelpText>
    <label>Output Audit Override Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Override</fullName>
                <default>true</default>
                <label>Override</label>
            </value>
            <value>
                <fullName>Raw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>