dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>Name of the Service, an implementation of which we are looking to invoke. Note that we use the Service name rather than a lookup as the Service may not be configured in all environments, in which case a stub method should be used.</description>
    <inlineHelpText>Name of the Service, an implementation of which we are looking to invoke. Note that we use the Service name rather than a lookup as the Service may not be configured in all environments, in which case a stub method should be used.</inlineHelpText>
    <label>Service Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>