dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Use_Cache__c.field-meta.xml
<CustomField>
    <fullName>Use_Cache__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should we use cached metadata for this invocation. Note this will only have an impact if Platform Cache is enabled.</description>
    <inlineHelpText>Should we use cached metadata for this invocation. Note this will only have an impact if Platform Cache is enabled.</inlineHelpText>
    <label>Use Cache</label>
    <type>Checkbox</type>
</CustomField>