dxscale/core/serviceBase/objects/Service_Invocation__mdt/fields/Use_Cache_Partition__c.field-meta.xml
<CustomField>
    <fullName>Use_Cache_Partition__c</fullName>
    <defaultValue>&quot;local&quot;</defaultValue>
    <description>Fully Qualified Name fo the Org Cache Partition to use if Use Cache is set to true</description>
    <inlineHelpText>Fully Qualified Name fo the Org Cache Partition to use if Use Cache is set to true</inlineHelpText>
    <label>Use Cache Partition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>