dxscale/core/serviceBase/objects/Service_Invocation__mdt/validationRules/External_Invocation_needs_Custom_Perm.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Invocation_needs_Custom_Perm</fullName>
    <active>true</active>
    <description>An external user must have a Custom Permission assigned to invoke a service</description>
    <errorConditionFormula>IF(  AND (External_Invocation__c , Invocation_Restricted_By_Permission__c),
ISBLANK( Invocation_Permission__c  ) , false
)</errorConditionFormula>
    <errorMessage>An external user must have a Custom Permission assigned to invoke a service</errorMessage>
</ValidationRule>