dxscale/core/serviceBase/objects/Service_Invocation__mdt/listViews/Service_Invocations.listView-meta.xml
<ListView>
    <fullName>Service_Invocations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Invocation_Type__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Input_Interface_Version__c</columns>
    <columns>Output_Interface_Version__c</columns>
    <columns>Use_Cache__c</columns>
    <columns>Use_Cache_Partition__c</columns>
    <filterScope>Everything</filterScope>
    <label>Service Invocations</label>
    <language>en_US</language>
</ListView>